--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <a href="https://www.instagram.com/ecoyou.store/"><i class="fa-brands fa-instagram fa-2x"></i></a>
               </dev>
         </h5>
-
+<progress id="project" max="100" value="70"> 70% </progress>
     </div class="last">
 
 
