--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>eco you</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="icon.ico">
+  <link rel="icon" type="image/png" href="ecoyou_favicon.png">
 
   <div class="myDiv">
       <h2><dfn>Zero Waste</dfn> — модный эко-тренд, который призывает к осознанному и ответственному потреблению.</h2>
