--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
                 <a href="https://www.instagram.com/ecoyou.store/"><i class="fa-brands fa-instagram fa-2x"></i></a>
               </dev>
         </h5>
-<progress id="project" max="100" value="70"> 70% </progress>
+        <h4>Переработка мусора в мире</h4>
+        <progress id="project" max="100" value="20"> 20% </progress>
     </div class="last">
 
 
